# Michel_Reco

./: CMakeLists.txt  README.md  setup.sh  source_me_first.sh
apps/: michel-reco-clustering.cxx  michel-reco-stopping-mu-selection.cxx  michel-reco-track-profile.cxx
include/: cluster_tools.h  mr-stopping-mu-selection.h  mymaths.h  parameters.h  pca.h
src/: cluster_tools.cpp  mr-stopping-mu-selection.cpp  mymaths.cpp  pca.cpp
